{
  "version": 4,
  "terraform_version": "0.12.30",
  "serial": 51,
  "lineage": "074ef66f-a99a-a73d-1369-cb3d4a8eb8f1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:route-table/rtb-050adfed8548463b3",
            "default_route_table_id": "rtb-050adfed8548463b3",
            "id": "rtb-050adfed8548463b3",
            "owner_id": "738112461029",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0196a86fd529bbbd3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-route-table"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_eip.my-test-eip",
            "module.vpc.aws_nat_gateway.my-test-nat-gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "my-test-tgw",
      "provider": "module.transit_gateway.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:738112461029:transit-gateway/tgw-0cae01bbd143b3c32",
            "association_default_route_table_id": "tgw-rtb-0a10c1b72540e69ac",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "my-test-transit-gateway",
            "dns_support": "enable",
            "id": "tgw-0cae01bbd143b3c32",
            "owner_id": "738112461029",
            "propagation_default_route_table_id": "tgw-rtb-0a10c1b72540e69ac",
            "tags": {
              "Name": "my-test-transit-gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "my-test-transit-gateway-attachment",
      "provider": "module.transit_gateway.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b1ca67f26c33fee9",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0260ce841626be120",
              "subnet-0e31802142c01d142"
            ],
            "tags": {
              "Name": "my-test-tgw-vpc-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0cae01bbd143b3c32",
            "vpc_id": "vpc-0e838d6aa3862dc49",
            "vpc_owner_id": "738112461029"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.my-test-tgw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-test-eip",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08ba2248d18b0800f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-201-149-185.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.149.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-test-instance",
      "each": "list",
      "provider": "module.ec2.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:internet-gateway/igw-0507d05e0b69c639e",
            "id": "igw-0507d05e0b69c639e",
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-test-igw"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:738112461029:loadbalancer/app/my-test-alb/8b97d67a1553e2f3",
            "arn_suffix": "app/my-test-alb/8b97d67a1553e2f3",
            "dns_name": "my-test-alb-1389519310.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:738112461029:loadbalancer/app/my-test-alb/8b97d67a1553e2f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-test-alb",
            "security_groups": [
              "sg-010e260567d916e66"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0260ce841626be120"
              },
              {
                "subnet_id": "subnet-0e31802142c01d142"
              }
            ],
            "subnets": [
              "subnet-0260ce841626be120",
              "subnet-0e31802142c01d142"
            ],
            "tags": {
              "Name": "my-test-alb"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:738112461029:listener/app/my-test-alb/8b97d67a1553e2f3/7c7b43f28e53a3e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:738112461029:targetgroup/my-test-tg/ffefea2bf878042b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:738112461029:listener/app/my-test-alb/8b97d67a1553e2f3/7c7b43f28e53a3e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:738112461029:loadbalancer/app/my-test-alb/8b97d67a1553e2f3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.my-aws-alb",
            "module.alb.aws_lb_target_group.my-target-group",
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:738112461029:targetgroup/my-test-tg/ffefea2bf878042b",
            "arn_suffix": "targetgroup/my-test-tg/ffefea2bf878042b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:738112461029:targetgroup/my-test-tg/ffefea2bf878042b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-test-nat-gateway",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ba2248d18b0800f",
            "id": "nat-0196a86fd529bbbd3",
            "network_interface_id": "eni-0d7698838c5be1660",
            "private_ip": "10.0.1.71",
            "public_ip": "54.201.149.185",
            "subnet_id": "subnet-0260ce841626be120"
          },
          "dependencies": [
            "module.vpc.aws_eip.my-test-eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:route-table/rtb-0fe33e78b83040818",
            "id": "rtb-0fe33e78b83040818",
            "owner_id": "738112461029",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0507d05e0b69c639e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-test-public-route"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e719545e2fe13c57",
            "route_table_id": "rtb-050adfed8548463b3",
            "subnet_id": "subnet-06cd69b720a2d12f5"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.my-test-eip",
            "module.vpc.aws_nat_gateway.my-test-nat-gateway",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfbd53465eef76dc",
            "route_table_id": "rtb-050adfed8548463b3",
            "subnet_id": "subnet-0df4d4b74ebc1cb0b"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.my-test-eip",
            "module.vpc.aws_nat_gateway.my-test-nat-gateway",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c886d5b202f6438a",
            "route_table_id": "rtb-0fe33e78b83040818",
            "subnet_id": "subnet-0260ce841626be120"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093263f9f60c56974",
            "route_table_id": "rtb-0fe33e78b83040818",
            "subnet_id": "subnet-0e31802142c01d142"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-alb-sg",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:security-group/sg-010e260567d916e66",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-010e260567d916e66",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "738112461029",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-asg-sg",
      "provider": "module.auto_scaling.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:security-group/sg-07f0fbb5d4093cf27",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07f0fbb5d4093cf27",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "738112461029",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-rds-sg",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:security-group/sg-0b085f7ca6536eaab",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b085f7ca6536eaab",
            "ingress": [],
            "name": "my-rds-sg",
            "name_prefix": "",
            "owner_id": "738112461029",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:security-group/sg-08ca5c571b2ec9717",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08ca5c571b2ec9717",
            "ingress": [],
            "name": "my-test-sg",
            "name_prefix": "",
            "owner_id": "738112461029",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-257923175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08ca5c571b2ec9717",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2185426993",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ca5c571b2ec9717",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.auto_scaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3833701284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07f0fbb5d4093cf27",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.auto_scaling.aws_security_group.my-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2404571411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010e260567d916e66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "module.auto_scaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1376517649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07f0fbb5d4093cf27",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.auto_scaling.aws_security_group.my-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-970491046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010e260567d916e66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-rds-sg-rule",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1742327108",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b085f7ca6536eaab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds.aws_security_group.my-rds-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "module.auto_scaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-208335871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07f0fbb5d4093cf27",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.auto_scaling.aws_security_group.my-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "module.alb.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3485888287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-010e260567d916e66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4129132254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b085f7ca6536eaab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds.aws_security_group.my-rds-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-885564804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ca5c571b2ec9717",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:subnet/subnet-06cd69b720a2d12f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06cd69b720a2d12f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-test-private-subnet.1"
            },
            "tags_all": {
              "Name": "my-test-private-subnet.1"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:subnet/subnet-0df4d4b74ebc1cb0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0df4d4b74ebc1cb0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-test-private-subnet.2"
            },
            "tags_all": {
              "Name": "my-test-private-subnet.2"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:subnet/subnet-0260ce841626be120",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0260ce841626be120",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-test-public-subnet.1"
            },
            "tags_all": {
              "Name": "my-test-public-subnet.1"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:subnet/subnet-0e31802142c01d142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e31802142c01d142",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-test-public-subnet.2"
            },
            "tags_all": {
              "Name": "my-test-public-subnet.2"
            },
            "vpc_id": "vpc-0e838d6aa3862dc49"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:738112461029:vpc/vpc-0e838d6aa3862dc49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0625d3bab174feeed",
            "default_route_table_id": "rtb-050adfed8548463b3",
            "default_security_group_id": "sg-046e56bc62286eec1",
            "dhcp_options_id": "dopt-062d777e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e838d6aa3862dc49",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050adfed8548463b3",
            "owner_id": "738112461029",
            "tags": {
              "Name": "my-new-test-terraform-vpc"
            },
            "tags_all": {
              "Name": "my-new-test-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}